--- a/basic_routing-app/package.json
+++ b/basic_routing-app/package.json
@@ -10,6 +10,10 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/angular/in-memory-web-api.git"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.0",
@@ -45,5 +49,12 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 1.2.3.",
+  "bugs": {
+    "url": "https://github.com/angular/in-memory-web-api/issues"
+  },
+  "homepage": "https://github.com/angular/in-memory-web-api#readme",
+  "main": "karma.conf.js",
+  "author": ""
 }
